--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cub/cub",
-  "version": "1.0.0",
+  "version": "1.0.0-alpha.0",
   "description": "a web framework for fibjs",
   "main": "lib/Cub.js",
   "scripts": {
