--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@fibjs/ci": "^1.0.0",
+    "@fibjs/fs-readdir-recursive": "^1.0.2",
     "express": "^4.15.2",
     "jsdoc": "^3.4.3",
     "koa": "^2.2.0"
