--- a/package.json
+++ b/package.json
@@ -34,6 +34,10 @@
     "koa": "^2.2.0"
   },
   "dependencies": {
-    "statuses": "^1.3.1"
+    "content-disposition": "^0.5.2",
+    "escape-html": "^1.0.3",
+    "mime-types": "^2.1.15",
+    "statuses": "^1.3.1",
+    "vary": "^1.1.1"
   }
 }
